--- a/DesafioTabuada2/DesafioTabuada2/Base.lproj/Main.storyboard
+++ b/DesafioTabuada2/DesafioTabuada2/Base.lproj/Main.storyboard
@@ -56,9 +56,9 @@
                                 </connections>
                             </segmentedControl>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QLx-gi-cR0">
-                                <rect key="frame" x="81" y="257" width="212" height="21"/>
+                                <rect key="frame" x="81" y="226" width="212" height="52"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -82,7 +82,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-599" y="92"/>
+            <point key="canvasLocation" x="-599.20000000000005" y="91.304347826086968"/>
         </scene>
     </scenes>
 </document>
