--- a/SimulacaoEDebugging/SimulacaoEDebugging/Base.lproj/Main.storyboard
+++ b/SimulacaoEDebugging/SimulacaoEDebugging/Base.lproj/Main.storyboard
@@ -18,15 +18,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Ola mundo!" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="INO-09-9av">
-                                <rect key="frame" x="67" y="136" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="HkY-cP-hcF">
+                                <rect key="frame" x="67" y="136" width="240" height="395"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Ola mundo!" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="INO-09-9av">
+                                        <rect key="frame" x="0.0" y="0.0" width="240" height="395"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="HkY-cP-hcF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="67" id="2pf-H2-gjn"/>
+                            <constraint firstItem="HkY-cP-hcF" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="116" id="GBb-vw-5sV"/>
+                            <constraint firstItem="HkY-cP-hcF" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Gua-ZS-j6W"/>
+                            <constraint firstItem="HkY-cP-hcF" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="b2d-2V-inB"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
