--- a/aula08/UIAlertController/UIAlertController/Base.lproj/Main.storyboard
+++ b/aula08/UIAlertController/UIAlertController/Base.lproj/Main.storyboard
@@ -53,6 +53,22 @@
                                     <action selector="criaActionSheet:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7dt-AX-PLs"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HSx-Kd-EPT">
+                                <rect key="frame" x="77" y="450" width="220" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Alerta com 4 botoes"/>
+                                <connections>
+                                    <action selector="criaAlertaCom4Botoes:" destination="BYZ-38-t0r" eventType="touchUpInside" id="w3A-Gl-V8H"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dgO-4U-w6b">
+                                <rect key="frame" x="113" y="526" width="134" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Alerta com Imagem"/>
+                                <connections>
+                                    <action selector="criaAlertaComImagem:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9Iq-mH-ha5"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
